# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qflib"
version = "0.11.0"
description = "qflib quant library"
maintainers = [{name = "Nuohan Luo", email = "nuohanluo.ny@gmail.com"}]
dependencies = ["numpy"]
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
qflib = ["*.pyd", "*.so"]
